--- a/ToDo/ToDo/Base.lproj/Main.storyboard
+++ b/ToDo/ToDo/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -92,41 +91,38 @@
                                         <rect key="frame" x="0.0" y="200" width="358" height="453"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="b0e-cJ-eth" customClass="TaskTableViewCell" customModule="ToDo" customModuleProvider="target">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="todoCell" id="b0e-cJ-eth" customClass="TaskTableViewCell" customModule="ToDo" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="44.666666030883789" width="358" height="43.666667938232422"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b0e-cJ-eth" id="CsQ-Df-X8p">
                                                     <rect key="frame" x="0.0" y="0.0" width="358" height="43.666667938232422"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" tag="1" contentMode="scaleToFill" spacingType="standard" id="pS0-oZ-vmU">
-                                                            <rect key="frame" x="0.0" y="-3.6666660308837891" width="358" height="50"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lkD-yP-LJh">
+                                                            <rect key="frame" x="9" y="-4" width="50" height="50"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <subviews>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lkD-yP-LJh">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" constant="50" id="4G3-Y2-4DP"/>
-                                                                        <constraint firstAttribute="height" constant="50" id="ykf-4p-dRp"/>
-                                                                    </constraints>
-                                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                                    <state key="normal" image="checkmark.square.fill" catalog="system"/>
-                                                                </button>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="목표1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZq-qD-NgU">
-                                                                    <rect key="frame" x="58" y="0.0" width="300" height="50"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="50" id="DIq-va-hh5"/>
-                                                                    </constraints>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                        </stackView>
+                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                            <state key="normal" image="checkmark.square.fill" catalog="system"/>
+                                                        </button>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="목표1" lineBreakMode="tailTruncation" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZq-qD-NgU">
+                                                            <rect key="frame" x="67" y="-4" width="98" height="50"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                 </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="btnCheckDone" destination="lkD-yP-LJh" id="oNM-59-7Fo"/>
+                                                    <outlet property="lblTodo" destination="fZq-qD-NgU" id="vnz-j8-UfC"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="PEL-9W-xMp"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="6Iy-gi-Myf"/>
+                                        </connections>
                                     </tableView>
                                 </subviews>
                             </stackView>
@@ -142,15 +138,14 @@
                     </view>
                     <navigationItem key="navigationItem" id="mEq-3b-UKx"/>
                     <connections>
-                        <outlet property="btnCheckDone" destination="lkD-yP-LJh" id="TWm-k3-8Nd"/>
                         <outlet property="lblToday" destination="7uz-CW-BFp" id="7F5-QF-K2E"/>
-                        <outlet property="lblTodo" destination="fZq-qD-NgU" id="RoO-Ox-H9Q"/>
                         <outlet property="lblTodoPercent" destination="n1j-j7-PVl" id="vWD-Ny-ZNM"/>
+                        <outlet property="tableView" destination="7LF-Gj-Ggb" id="JBD-fe-RWd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1578" y="-311"/>
+            <point key="canvasLocation" x="1544.6153846153845" y="-273.69668246445497"/>
         </scene>
         <!--Add View Controller-->
         <scene sceneID="2gg-59-9Hn">
@@ -447,7 +442,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PGc-fp-zGr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2472" y="-344"/>
+            <point key="canvasLocation" x="2314" y="-321"/>
         </scene>
         <!--My Activity View Controller-->
         <scene sceneID="gsr-4q-IeQ">
